welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: error: unclosed string literal
	"for (c <- 1 to n-2) {
        ^Array1:15: error: unclosed string literal
		"var a = T(c) ;
                ^Array1:16: error: unclosed string literal
		"T(c) = T(c-1);
                ^Array1:17: error: unclosed string literal
		"T(c+1) = a;
                ^Array1:18: error: unclosed string literal
	"}
        ^